# time-series-eviews

./: LICENSE  README.md  pyproject.toml
src/timeseries_eviews/: __about__.py  __init__.py  cli.py  ts_model.py  utils.py  var_model.py
tests/: test_ts_model.py  test_utils.py  test_var_model.py
tests/data_manual/: qqq.csv
